<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="view_model"
            type="org.kimp.kinopoisk.tinkoff.data.model.FilmsFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.FilmsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextAppearance="@style/TextAppearance.App.ToolbarTitle"
                app:title="@{view_model.currentMode().getValue() != org.kimp.kinopoisk.tinkoff.data.FilmsFragmentMode.ShowFavoriteFilms ? @string/films_fragment_popular_btn_text : @string/films_fragment_favorite_btn_text}"
                tools:title="Popular">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/films_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/films_fragment_content_top_and_bottom_margins"
            android:layout_marginBottom="@dimen/films_fragment_content_top_and_bottom_margins"
            app:layout_constraintBottom_toTopOf="@id/popular_btn"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout"
            android:visibility="@{view_model.hasErrors() ? android.view.View.GONE : android.view.View.VISIBLE}"
            tools:itemCount="4"
            tools:visibility="gone"
            tools:listitem="@layout/view_film_card" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="@{view_model.hasErrors() ? android.view.View.VISIBLE : android.view.View.GONE }"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout"
            app:layout_constraintBottom_toTopOf="@id/popular_btn">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_network_error"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/film_card_title_font_size"
                android:text="@string/films_fragment_network_error_msg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/films_fragment_retry_btn"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popular_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/films_fragment_content_left_and_right_margins"
            android:layout_marginEnd="@dimen/films_fragment_half_space_between_favorite_and_popular_btns"
            android:text="@string/films_fragment_popular_btn_text"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/favorite_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/films_fragment_half_space_between_favorite_and_popular_btns"
            android:layout_marginEnd="@dimen/films_fragment_content_left_and_right_margins"
            android:text="@string/films_fragment_favorite_btn_text"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/popular_btn"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
