<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="film"
            type="org.kimp.kinopoisk.tinkoff.data.remote.dto.FilmDto" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.AboutFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/poster_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true" />


                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_collapseMode="pin" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/app_bar_height"
                    app:layout_collapseMode="pin"
                    app:icon="@drawable/ic_back"
                    android:text="@string/empty"
                    style="@style/Widget.Material3.Button.IconButton"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_fragment_content_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:textSize="@dimen/about_fragment_title_text_size"
                    android:text="@{film.nameRu}"
                    tools:text="Звездные Войны - какой-то там изгой"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/about_fragment_title_and_desc_spacing"
                    android:textSize="@dimen/about_fragment_description_text_size"
                    android:text="@{film.description}"
                    android:justificationMode="inter_word"
                    tools:text="Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/about_fragment_title_and_desc_spacing">

                   <com.google.android.material.textview.MaterialTextView
                       android:id="@+id/genres_msg"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:textStyle="bold"
                       android:text="@string/about_fragment_genres_msg"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/countries_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/genres_msg"
                        android:layout_marginTop="@dimen/about_fragment_title_and_desc_spacing"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:textStyle="bold"
                        android:text="@string/about_fragment_countries_msg" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/genres_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/genres_msg"
                        android:maxLines="1"
                        android:ellipsize="end"
                        tools:text="Hello, my name, is, so cringe" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/countries_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/countries_msg"
                        app:layout_constraintRight_toRightOf="parent"
                        android:maxLines="1"
                        android:ellipsize="end"
                        tools:text="А вот еще куча текста" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>